[package]
name = "libcnab"
version = "0.1.0"
license = "MIT"
authors = ["Matt Butcher <matt.butcher@microsoft.com>"]
edition = "2018"
description = "A Rust implementation of CNAB Core 1.0-WD"
homepage = "https://cnab.io"
readme = "README.md"
repository = "https://github.com/deislabs/libcnab-rust"
keywords = ["cnab"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
canonical_json = { git = "https://github.com/engineerd/canonical_json" }
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
spectral = "0.6"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bundle_serde"
harness = false
