[package]
name = "libcnab"
version = "0.1.0"
license = "MIT"
authors = ["Matt Butcher <matt.butcher@microsoft.com>"]
edition = "2018"
description = "A Rust implementation of CNAB Core 1.0 final draft"
homepage = "https://cnab.io"
readme = "README.md"
repository = "https://github.com/cnabio/cnab-rs"
keywords = ["cnab"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spectral = "0.6"
failure = "0.1"
ulid = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bundle_serde"
harness = false
